# DEM

./: _main.py  asd.py  main.py  setup.cfg
DEMcookies/: contact.py  particle_generation.py  solver.py
tests/: test_solver.py
