[metadata]
name = DEM cookies
version = 0
author = Bruno
description = DEM model
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3
    Operating System :: OS Independent

[options]
packages =
    DEMcookies
include_package_data = True
install_requires =
    numpy>=1.26
    matplotlib>=3.8
python_requires = >=3.10

[options.extras_require]
testing =
    pytest>=7.4
    pytest-cov>=4.1
